--- a/coajay.html
+++ b/coajay.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <title>User Information Form</title>
-  <link type="text/css" rel="stylesheet" href="jay-r_coa.css" media="screen">
+  <link type="text/css" rel="stylesheet" href="coa.css" media="screen">
 </head>
 <body>
   <h1 class="header">User Information Form</h1>
